content/core/1.6.0/reference/vendr-core-services/istockservice.md
---
title: IStockService
description: API reference for IStockService in Vendr, the eCommerce solution for Umbraco v8+
---
## IStockService

```csharp
public interface IStockService
```

**Namespace**
* [Vendr.Core.Services](../)

### Methods

#### GetStock (1 of 2)

Gets the stock level of a given product

```csharp
public decimal? GetStock(string productReference)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to retrieve |

**Returns**

The stock level of the product

---

#### GetStock (2 of 2)

Gets the stock level of a given product

```csharp
public decimal? GetStock(string productReference, string productVariantReference)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to retrieve |
| productVariantReference | The unique reference of the variant of the product who's stock level to retrieve |

**Returns**

The stock level of the product


---

#### IncreaseStock (1 of 2)

Increases the stock level of a given product

```csharp
public void IncreaseStock(string productReference, decimal increaseBy)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to increase |
| increaseBy | The amount to increase the stock level by |

---

#### IncreaseStock (2 of 2)

Increases the stock level of a given product

```csharp
public void IncreaseStock(string productReference, string productVariantReference, 
    decimal increaseBy)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to increase |
| productVariantReference | The unique reference of variant of the product who's stock level to increase |
| increaseBy | The amount to increase the stock level by |


---

#### ReduceStock (1 of 2)

Reduces the stock level of a given product

```csharp
public void ReduceStock(string productReference, decimal reduceBy)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to reduce |
| reduceBy | The amount to reduce the stock level by |

---

#### ReduceStock (2 of 2)

Reduces the stock level of a given product

```csharp
public void ReduceStock(string productReference, string productVariantReference, decimal reduceBy)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to reduce |
| productVariantReference | The unique reference of the variant of the product who's stock level to reduce |
| reduceBy | The amount to reduce the stock level by |


---

#### SetStock (1 of 2)

Sets the stock level of a given product

```csharp
public void SetStock(string productReference, decimal value)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to set |
| value | The value to set the stock level to |

---

#### SetStock (2 of 2)

Sets the stock level of a given product

```csharp
public void SetStock(string productReference, string productVariantReference, decimal value)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The unique reference of the product who's stock level to set |
| productVariantReference | The unique reference of the variant of the product who's stock level to set |
| value | The value to set the stock level to |


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
